Bug 356016 - Closing tabs hides/unhides left dock
Summary: Closing tabs hides/unhides left dock
Status: RESOLVED FIXED
Alias: None
Product: kdevplatform
Classification: Developer tools
Component: sublime (other bugs)
Version First Reported In: 4.90.90
Platform: Debian unstable Linux
: NOR minor
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL: https://www.dropbox.com/s/h2xc1aeitkb...
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-28 09:34 UTC by peje66
Modified: 2015-11-30 09:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.7.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description peje66 2015-11-28 09:34:59 UTC
Using fast click on scroll-wheel to close multiple tabs in editor hides/unhides left docker.
After every 3-4 tab is closed the visibility of the left docker changes.
If I go slow, 1-2 clicks/s, it works as intended, any faster than that and problem appears.

I'm using middle-click in tab because it's easier than to left-click the closing-(x).



Reproducible: Always
Comment 1 Kevin Funk 2015-11-29 13:16:30 UTC
Confirmed.

Double-clicking on a tab hides/restores docks. It shouldn't do that when trying to close them, though.
Comment 2 Kevin Funk 2015-11-29 14:26:37 UTC
Git commit 5e1af74f5038b6e39bd959781e76df05d4e19479 by Kevin Funk.
Committed on 29/11/2015 at 14:26.
Pushed by kfunk into branch '1.7'.

Dont hide/restore docks on double-click with RMB
FIXED-IN: 1.7.3

M  +23   -1    sublime/container.cpp

http://commits.kde.org/kdevplatform/5e1af74f5038b6e39bd959781e76df05d4e19479
Comment 3 Kevin Funk 2015-11-30 09:27:14 UTC
Git commit 7d8b19d95c2f586581b6b0d073e862693b7e1333 by Kevin Funk.
Committed on 29/11/2015 at 14:23.
Pushed by kfunk into branch 'master'.

Dont hide/restore docks on double-click with RMB

M  +23   -1    sublime/container.cpp

http://commits.kde.org/kdevplatform/7d8b19d95c2f586581b6b0d073e862693b7e1333
Comment 4 Kevin Funk 2015-11-30 09:34:54 UTC
Git commit 482215c19bf3a536d967184f08abf9d9a65ff5da by Kevin Funk.
Committed on 29/11/2015 at 14:25.
Pushed by kfunk into branch '5.0'.

Dont hide/restore docks on double-click with RMB

M  +23   -1    sublime/container.cpp

http://commits.kde.org/kdevplatform/482215c19bf3a536d967184f08abf9d9a65ff5da