Dont hide/restore docks on double-click with RMB

BUG: 356016